--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="form">
+<!-- <div class="form">
   <mat-accordion class="example-headers-align" dir="rtl">
     <mat-expansion-panel class="aaa" [expanded]="step === 0" (opened)="setStep(0)">
       <mat-expansion-panel-header class="icon-arrow">
@@ -11,13 +11,7 @@
         <mat-icon class="icon">edit</mat-icon>
         <mat-icon class="icon">delete_sweep</mat-icon>
       </mat-expansion-panel-header>
-
       <app-form></app-form>
-
-
-      <mat-action-row>
-        <button mat-button color="primary" (click)="nextStep()">Next</button>
-      </mat-action-row>
     </mat-expansion-panel>
 
     <mat-expansion-panel [expanded]="step === 1" (opened)="setStep(1)">
@@ -36,11 +30,6 @@
         <mat-label>Country</mat-label>
         <input matInput>
       </mat-form-field>
-
-      <mat-action-row>
-        <button mat-button color="warn" (click)="prevStep()">Previous</button>
-        <button mat-button color="primary" (click)="nextStep()">Next</button>
-      </mat-action-row>
     </mat-expansion-panel>
 
     <mat-expansion-panel [expanded]="step === 2" (opened)="setStep(2)">
@@ -54,12 +43,11 @@
         <mat-icon class="icon">edit</mat-icon>
         <mat-icon class="icon">delete_sweep</mat-icon>
       </mat-expansion-panel-header>
-
-      <mat-action-row>
-        <button mat-button color="warn" (click)="prevStep()">Previous</button>
-        <button mat-button color="primary" (click)="nextStep()">End</button>
-      </mat-action-row>
     </mat-expansion-panel>
 
   </mat-accordion>
-</div>
+</div> -->
+
+<!-- <app-form></app-form> -->
+
+<app-contribute-details-form></app-contribute-details-form>
