--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -1,4 +1,10 @@
-
+.form {
+	margin: auto;
+	width: 50%; 
+    border: 3px solid blue;
+	border-radius: 1%;
+	padding-bottom: 10px;
+}
 .all {
 	margin-right: 20px;
 }
@@ -16,9 +22,7 @@
 }
 
 .try{
-	color:aqua;
 	width: 100%;
-	
 }
 
 .btn {
