--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,5 +49,6 @@
 </div> -->
 
 <!-- <app-form></app-form> -->
-
-<app-contribute-details-form></app-contribute-details-form>
+<div class="container">
+  <app-contribute-list></app-contribute-list>
+</div>
