--- a/src/app/modules/contributes/contribute-details-form/contribute-details-form.component.css
+++ b/src/app/modules/contributes/contribute-details-form/contribute-details-form.component.css
@@ -1,88 +1,36 @@
-/* .form {
-	margin: auto;
-	width: 60%; 
-    border: 3px solid blue;
-	border-radius: 1%;
-	padding-bottom: 10px;
-} */
-/* .all {
-	margin-right: 20px;
-} */
-
-/* .container {
-	margin-left: 20px;
-} */
-
 .title {
-	font-family: "Trebuchet MS", Tahoma, sans-serif;
-	font-size: larger;
-	font-weight: bold;
-	margin-block-start: 1em;
+    font-family: "Trebuchet MS", Tahoma, sans-serif;
+    font-size: larger;
+    font-weight: bold;
+    margin-block-start: 1em;
     margin-block-end: 1em;
 }
 
-.try{
-	width: 100% !important;
+.try {
+    width: 100% !important;
 }
 
 .btn {
-	border-radius: 50px;
-	color:#0d6efd;
-	border:1px solid #0d6efd;
-	width: 15%;
-	margin: 5px;
+    border-radius: 50px;
+    /* color:#0d6efd;
+	border:1px solid #0d6efd; */
+    width: 15%;
+    margin: 5px;
 }
-
+/* 
 .btn:hover {
 	color: #fff;
 	background-color: #0d6efd;
-}
-
-/* p{
-	margin-block-start: 0em;
-    margin-block-end: 0em;
-} */
- /* mat-card{
-    width: fit-content;
 }  */
 
-/* mat-form-field {
-    padding: 0.25em 0.25em;
-} */
-
-
-
-/* mat-form-field.ng-pristine {
-    border:yellow;
+.flx {
+    flex-direction: row;
+    box-sizing: border-box;
+    display: flex;
 }
 
-mat-form-field.ng-touched.ng-invalid {
-color:red;
+.flx1 {
+    flex-direction: column;
+    box-sizing: border-box;
+    display: flex;
 }
-
-mat-form-field.ng-touched.ng-valid {
-    color:green;
-}*/
-
-/* default and hover color */
-/* ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
-    color: red;
-} */
-
-/* focused color */
-/* ::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
-    color: green;
-} */
-
-/* floating label color */
-/* ::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-label { 
-    color: green; 
-} */
-
-
-
-
-
-
-
-	
