--- a/src/app/modules/contributes/contribute-list/contribute-list.component.html
+++ b/src/app/modules/contributes/contribute-list/contribute-list.component.html
@@ -1,67 +1,33 @@
 
-<!-- <ul class="list-group">
-    <li class="list-group-item" *ngFor="let contribute of contributes" [ngClass]="{ 'active':contribute.id==selectedContribute2?.id,
-                     'list-group-item-success':contribute.name=='a' }"
-        [class.list-group-item-danger]="contribute.type==contributeType.A">
-        <div class="row">
-            <div class="col-1">{{contribute.id}}</div>
-            <div class="col-3">{{contribute.name}}</div>
-            <div class="col-2">
-                <button (click)="showDetails(contribute)">edit</button>
-            </div>
-            <div class="col-2">
-                <button (click)="deleteContribute(contribute)">sweept_delete </button>
-            </div>
-        </div>
-    </li>
-</ul>
-<br> -->
-
-<div class="form">
-    <mat-accordion class="example-headers-align" dir="rtl" #firstAccordion>
-      <mat-expansion-panel (click)="showDetails(contribute)" [expanded]="step === 0" (opened)="setStep(0)" *ngFor="let contribute of contributes" >
-        <mat-expansion-panel-header class="icon-arrow">
+<div class="form" dir="rtl">
+  <mat-accordion>
+    <mat-expansion-panel  [expanded]=false
+      *ngFor="let contribute of contributes" #matExpansionPanel1 hideToggle>
+      <mat-expansion-panel-header class="icon-arrow" class="disabled-pointer">
         <mat-panel-title>
-            {{contribute.id}}          
+          {{contribute.id}}
         </mat-panel-title>
-          <mat-panel-description>
-            {{contribute.name}}          
+        <mat-panel-description>
+          {{contribute.name}}
         </mat-panel-description>
-          <mat-icon class="icon" (click)="showDetails(contribute)">edit</mat-icon>
-          <mat-icon class="icon" (click)="deleteContribute(contribute)">delete_sweep</mat-icon>
-        </mat-expansion-panel-header>
-        <app-contribute-details-form [contribute]="selectedContribute2" (onSaveContribute)="saveContributeToList($event)"></app-contribute-details-form>
+        <mat-icon class="icon" (click)="editDetails(contribute)" class="enabled-pointer">edit</mat-icon>
+        <mat-icon class="icon" (click)="deleteContribute(contribute)" class="enabled-pointer">delete_outline</mat-icon>
+        <h4 class="pipe">|</h4>
+        <mat-icon class="icon" color="primary" (click)="showDetails(contribute)" class="enabled-pointer toggle">keyboard_arrow_down</mat-icon>
+      </mat-expansion-panel-header>
+      <app-contribute-details-form [contribute]="selectedContribute2" [isDisable]="isDisable"
+        (onSaveContribute)="saveContributeToList($event)">
+      </app-contribute-details-form>
     </mat-expansion-panel>
-  
-    </mat-accordion>
-  </div>
+  </mat-accordion>
+</div>
 
-  <br>
-
+<br>
 <button class="btn btn-primary" (click)="showNewContributeDetails()">הוספת תרומה חדשה</button>
 <br>
 
 <button class="btn btn-success" (click)="saveContributeToServer()">שמירת תרומה בשרת</button>
 <br>
 
-<!-- <task-details
-    [task]="selectedTask"
-    (onSaveNewTask)="addNewTaskToList($event)"
-    (onFirstFocus)="showHelp()"
-></task-details> -->
-
-<!-- <task-details-form-td
-    [task]="selectedTask"
-    (onSaveNewTask)="addNewTaskToList2()"
-    (onFirstFocus)="showAdv()"
-></task-details-form-td> -->
-
-<app-contribute-details-form [contribute]="selectedContribute1" (onSaveContribute)="saveContributeToList($event)"></app-contribute-details-form>
-
-<!-- <button (click)="btnClick($event)">
-    Button Click With Event Object
-</button>
-
-<input type="text" (change)="search(searchTxt.value)" #searchTxt />
-
-{{searchTxt}} -->
+<app-contribute-details-form [contribute]="selectedContribute1" (onSaveContribute)="saveContributeToList($event)">
+</app-contribute-details-form>
