--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,54 +1,4 @@
-<!-- <div class="form">
-  <mat-accordion class="example-headers-align" dir="rtl">
-    <mat-expansion-panel class="aaa" [expanded]="step === 0" (opened)="setStep(0)">
-      <mat-expansion-panel-header class="icon-arrow">
-        <mat-panel-title>
-          יישות 1
-        </mat-panel-title>
-        <mat-panel-description>
-          100 ש"ח
-        </mat-panel-description>
-        <mat-icon class="icon">edit</mat-icon>
-        <mat-icon class="icon">delete_sweep</mat-icon>
-      </mat-expansion-panel-header>
-      <app-form></app-form>
-    </mat-expansion-panel>
 
-    <mat-expansion-panel [expanded]="step === 1" (opened)="setStep(1)">
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          יישות 2
-        </mat-panel-title>
-        <mat-panel-description>
-          200 ש"ח
-        </mat-panel-description>
-        <mat-icon class="icon">edit</mat-icon>
-        <mat-icon class="icon">delete_sweep</mat-icon>
-      </mat-expansion-panel-header>
-
-      <mat-form-field appearance="fill">
-        <mat-label>Country</mat-label>
-        <input matInput>
-      </mat-form-field>
-    </mat-expansion-panel>
-
-    <mat-expansion-panel [expanded]="step === 2" (opened)="setStep(2)">
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          יישות 3
-        </mat-panel-title>
-        <mat-panel-description>
-          300 ש"ח
-        </mat-panel-description>
-        <mat-icon class="icon">edit</mat-icon>
-        <mat-icon class="icon">delete_sweep</mat-icon>
-      </mat-expansion-panel-header>
-    </mat-expansion-panel>
-
-  </mat-accordion>
-</div> -->
-
-<!-- <app-form></app-form> -->
-<div class="container">
+<div class="container pageContainer">
   <app-contribute-list></app-contribute-list>
 </div>
