--- a/src/app/modules/contributes/contribute-list/contribute-list.component.css
+++ b/src/app/modules/contributes/contribute-list/contribute-list.component.css
@@ -11,4 +11,18 @@
     margin-left: 10px;
   }
 
-  /* #e2f8fb */
+  .mat-expansion-panel-header.mat-expanded,
+  .mat-expansion-panel-header:hover {
+    background: #e2f8fb !important;
+  }
+
+  .mat-expansion-panel.mat-expanded {
+      border: 2px #3f51b5 solid !important;
+  }
+
+  .mat-expansion-panel{
+      border: gray 1px solid;
+  }
+
+  
+ 
