--- a/src/app/modules/contributes/contribute-details-form/contribute-details-form.component.css
+++ b/src/app/modules/contributes/contribute-details-form/contribute-details-form.component.css
@@ -10,19 +10,6 @@
     width: 100% !important;
 }
 
-.btn {
-    border-radius: 50px;
-    /* color:#0d6efd;
-	border:1px solid #0d6efd; */
-    width: 15%;
-    margin: 5px;
-}
-/* 
-.btn:hover {
-	color: #fff;
-	background-color: #0d6efd;
-}  */
-
 .fxLayoutRow {
     flex-direction: row;
     box-sizing: border-box;
@@ -39,5 +26,19 @@
     margin-left: 10px;
 }
 
+.btn {
+    border-radius: 50px;
+    width: 15%;
+    margin: 5px;
+}
+
+.mat-card {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.mat-icon {
+    cursor: pointer;
+}
 
 
