--- a/src/app/modules/contributes/contribute-details-form/contribute-details-form.component.html
+++ b/src/app/modules/contributes/contribute-details-form/contribute-details-form.component.html
@@ -1,16 +1,23 @@
-<mat-card *ngIf="contribute else noContribute">
+<mat-card [ngClass]="{'mat-elevation-z24':contribute.id == 0, 'mat-elevation-z0':contribute.id !==0}"
+  *ngIf="contribute">
   <form [formGroup]="contributeForm">
     <div class="all" dir="rtl">
-      <p class="title" *ngIf="contribute.id == 0">הוספת דיווח על העמותה</p>   
-      <div [ngClass]="{'fxLayoutRow':contribute.id == 0, 'fxLayoutCol':contribute.id !== 0}" fxLayout.xs="column" fxLayoutGap.xs="0" #p>
-        <mat-form-field appearance="outline" fxFlex="25%" [ngClass]="{'marginLetf':contribute.id == 0}">
+      <ng-container *ngIf="contribute.id == 0">
+        <mat-icon (click)="clearNewContribute()"> cancel_presentation</mat-icon>
+        <p class="title">הוספת דיווח על העמותה</p>
+      </ng-container>
+      <div [ngClass]="{'fxLayoutRow':contribute.id == 0, 'fxLayoutCol':contribute.id !== 0}" fxLayout.xs="column"
+        fxLayoutGap.xs="0" #p>
+        <mat-form-field appearance="outline" fxFlex="25%"
+          [ngClass]="{'marginLetf':contribute.id == 0 && this.innerWidth >= 599}">
           <mat-label>שם הישות המדינית הזרה</mat-label>
           <input matInput formControlName="name">
           <mat-error *ngIf="contributeForm.controls?.['name']?.errors">
             {{getErrorMessage("name")}}
           </mat-error>
         </mat-form-field>
-        <mat-form-field appearance="outline" fxFlex="25%" [ngClass]="{'marginLetf':contribute.id == 0}">
+        <mat-form-field appearance="outline" fxFlex="25%"
+          [ngClass]="{'marginLetf':contribute.id == 0 && this.innerWidth >= 599}">
           <mat-label>סכום התרומה בש"ח</mat-label>
           <input matInput formControlName="sum">
           <mat-error *ngIf="contributeForm.controls?.['sum']?.errors">
@@ -47,8 +54,10 @@
         </mat-form-field>
       </div>
 
-      <div dir="rtl" [ngClass]="{'fxLayoutRow':contribute.id == 0, 'fxLayoutCol':contribute.id !== 0}" fxLayout.xs="column" fxLayoutGap="10px" fxLayoutGap.xs="0">
-        <mat-form-field appearance="outline" fxFlex="25%">
+      <div dir="rtl" [ngClass]="{'fxLayoutRow':contribute.id == 0, 'fxLayoutCol':contribute.id !== 0}"
+        fxLayout.xs="column" fxLayoutGap.xs="0">
+        <mat-form-field appearance="outline" fxFlex="25%"
+          [ngClass]="{'marginLetf':contribute.id == 0 && this.innerWidth >= 599}">
           <mat-label>סוג המטבע</mat-label>
           <mat-select formControlName="coinType">
             <mat-option *ngFor="let coinType of coinTypes" [value]="coinType">
@@ -70,14 +79,10 @@
     </div>
 
     <div class="example-button-row">
-      <button mat-raised-button color="primary" class="btn" (click)="saveNewContribute()"
+      <button mat-raised-button color="primary" class="btn btn-primary" (click)="saveNewContribute()"
         *ngIf="!this.isDisable">שמירה</button>
-      <button mat-raised-button color="primary" class="btn" type="button" (click)="clearContribute()"
+      <button mat-raised-button color="primary" class="btn btn-primary" type="button" (click)="clearContribute()"
         *ngIf="!this.isDisable" [disabled]="!contributeForm.dirty && !contributeForm.valid">ניקוי</button>
     </div>
   </form>
 </mat-card>
-
-<ng-template #noContribute>
-  <div class="card">לא נמצאו תרומות</div>
-</ng-template>
