--- a/src/app/modules/contributes/contribute-details-form/contribute-details-form.component.html
+++ b/src/app/modules/contributes/contribute-details-form/contribute-details-form.component.html
@@ -1,15 +1,15 @@
-<mat-card dir="rtl" [ngClass]="{'mat-elevation-z24':contribute.id == 0, 'mat-elevation-z0':contribute.id !==0}"
+<mat-card dir="rtl" [ngClass]="{'mat-elevation-z24':contribute.myId == 0, 'mat-elevation-z0':contribute.myId !==0}"
   *ngIf="contribute">
   <form [formGroup]="contributeForm">
     <div class="all">
-      <ng-container *ngIf="contribute.id == 0">
+      <ng-container *ngIf="contribute.myId == 0">
         <mat-icon (click)="clearNewContribute()"> cancel_presentation</mat-icon>
         <p class="title">הוספת דיווח על העמותה</p>
       </ng-container>
-      <div [ngClass]="{'fxLayoutRow':contribute.id == 0, 'fxLayoutCol':contribute.id !== 0}" fxLayout.xs="column"
+      <div [ngClass]="{'fxLayoutRow':contribute.myId == 0, 'fxLayoutCol':contribute.myId !== 0}" fxLayout.xs="column"
         fxLayoutGap.xs="0" #p>
         <mat-form-field appearance="outline" fxFlex="25%"
-          [ngClass]="{'marginLetf':contribute.id == 0 && this.innerWidth >= 599}">
+          [ngClass]="{'marginLetf':contribute.myId == 0 && this.innerWidth >= 599}">
           <mat-label>שם הישות המדינית הזרה</mat-label>
           <input matInput formControlName="name">
           <mat-error *ngIf="contributeForm.controls?.['name']?.errors">
@@ -17,7 +17,7 @@
           </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline" fxFlex="25%"
-          [ngClass]="{'marginLetf':contribute.id == 0 && this.innerWidth >= 599}">
+          [ngClass]="{'marginLetf':contribute.myId == 0 && this.innerWidth >= 599}">
           <mat-label>סכום התרומה</mat-label>
           <input matInput formControlName="sum">
           <mat-error *ngIf="contributeForm.controls?.['sum']?.errors">
@@ -54,10 +54,10 @@
         </mat-form-field>
       </div>
 
-      <div [ngClass]="{'fxLayoutRow':contribute.id == 0, 'fxLayoutCol':contribute.id !== 0}"
+      <div [ngClass]="{'fxLayoutRow':contribute.myId == 0, 'fxLayoutCol':contribute.myId !== 0}"
         fxLayout.xs="column" fxLayoutGap.xs="0">
         <mat-form-field appearance="outline" fxFlex="25%"
-          [ngClass]="{'marginLetf':contribute.id == 0 && this.innerWidth >= 599}">
+          [ngClass]="{'marginLetf':contribute.myId == 0 && this.innerWidth >= 599}">
           <mat-label>סוג המטבע</mat-label>
           <mat-select formControlName="coinType">
             <mat-option *ngFor="let coinType of coinTypes" [value]="coinType">
